tests/fixtures/invalid/max_set_dict.py
# Cannot call max() with Set[int], Dict[str, int]
x = max({1, 2, 3}, {"a": 1})
